# clope

./: CMakeLists.txt  Makefile  README  clope-config.cmake  clope.c  clope.h  index_match.h  main.c  options.c  options.h
include/clope/: clope.h
